# myokee

./: .env.example  .gitignore  .npmrc  .replit  Dockerfile  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  replit.md
attached_assets/: Pasted--Detected-service-running-on-port-10000-Menu-Docs-on-sp_1773686530083.txt  Pasted--DialogContent-assets-index-CJCR0V5s-js-53-Cross-Origin_1773683303198.txt  Pasted--Downloading-cache-Cloning-from-https-github-com-zw0583_1778233959906.txt  Pasted--Downloading-cache-Cloning-from-https-github-com-zw0583_1778234141748.txt  Pasted--Downloading-cache-Cloning-from-https-github-com-zw0583_1778234264300.txt  Pasted--Downloading-cache-Cloning-from-https-github-com-zw0583_1778234801734.txt  Pasted--Downloading-cache-Cloning-from-https-github-com-zw0583_1778348656400.txt  Pasted--EXACT-VISUAL-DESIGN-TOKENS-Create-a-completel-17782303_1778230370236.txt  Pasted--FFmpeg-render-ffmpeg-version-5--1773767427947_1773767427947.txt  Pasted--plugin-runtime-error-plugin-Failed-to-confirm-lyrics-d_1773554694409.txt  Pasted--workspace-modal-deploy-artifacts-karaoke-processor-mod_1773696290502.txt  Pasted-14-56-09-653-Running-build-in-Washington-D-C-USA-East-i_1773665910265.txt  Pasted-15-20-20-053-Running-build-in-Washington-D-C-USA-East-i_1773667303031.txt  Pasted-15-42-27-103-Running-build-in-Washington-D-C-USA-East-i_1773668604306.txt  Pasted-I-want-a-COMPLETE-FULL-SITE-REDESIGN-of-my-AI-karaoke-p_1778230343304.txt  Pasted-PRIVACY-POLICY-Last-updated-Insert-Date-MYOUKEE-we-our-_1773699318327.txt  (+7 more)
(+184 files in other folders)
