[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "demucs>=4.0.1",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
